Changed to dapper

--- a/ScoreWithSlack.Api/ScoreWithSlack.Api.csproj
+++ b/ScoreWithSlack.Api/ScoreWithSlack.Api.csproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ScoreController.cs" />
+    <Compile Include="Factory\ScoreWithSlackServiceFactory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
